tools/tree-sitter-arco-kdl/grammar.js
const kdl = require("tree-sitter-kdl/grammar");

const PURE_MATH_NODE_NAMES = [
  "expression",
  "minimize",
  "maximize",
  "expr",
  "filter",
  "if",
  "lower",
  "upper",
];

const MIXED_MATH_NODE_NAMES = ["constraint"];

const nodeNameChoice = (names) =>
  names.length === 1 ? names[0] : choice(...names);

const nodeShape = ($, { nameRule, childrenRule, fieldRule = $.node_field }) =>
  seq(
    alias(optional(seq("/-", repeat($._node_space))), $.node_comment),
    optional($.type),
    nameRule,
    repeat(seq(repeat1($._node_space), fieldRule)),
    optional(
      seq(
        repeat($._node_space),
        field("children", childrenRule),
        repeat($._ws),
      ),
    ),
    repeat($._node_space),
    $._node_terminator,
  );

const mathChildren = ($, mathRule) =>
  prec(
    2,
    seq(
      optional(
        seq(alias("/-", $.node_children_comment), repeat($._node_space)),
      ),
      "{",
      choice(field("math", mathRule), seq(repeat($._linespace))),
      "}",
    ),
  );

module.exports = grammar(kdl, {
  name: "arco_kdl",

  externals: ($, previous) => [...previous, $._implicit_terminator, $.arco_math_text],

  rules: {
    // Allow nodes to be implicitly terminated before `}`.
    _node_terminator: ($, previous) =>
      choice(previous, $._implicit_terminator),

    string: ($, previous) =>
      choice(previous, $._multiline_string),

    _multiline_string: ($) =>
      seq(
        '"""',
        optional($._newline),
        repeat(
          choice(
            alias(token.immediate(prec(1, /[^"]+/)), $.string_fragment),
            alias(token.immediate('"'), $.string_fragment),
          ),
        ),
        '"""',
      ),

    value: ($) =>
      seq(
        optional($.type),
        choice($.string, $.number, $.keyword, $.bare_identifier),
      ),

    bare_identifier: ($) => $._bare_identifier,

    node: ($) =>
      choice(
        $.arco_pure_math_node,
        $.arco_constraint_node,
        $.kdl_node,
      ),

    kdl_node: ($) =>
      prec(
        1,
        nodeShape($, {
          nameRule: $.identifier,
          childrenRule: $.node_children,
        }),
      ),

    // Nodes whose { } body is always algebra text. To add a new Arco
    // algebra-bearing predicate, add it to PURE_MATH_NODE_NAMES or
    // MIXED_MATH_NODE_NAMES above and regenerate the parser.
    arco_pure_math_node: ($) =>
      prec(
        2,
        nodeShape($, {
          nameRule: field("name", choice(...PURE_MATH_NODE_NAMES)),
          childrenRule: $.arco_pure_math_children,
        }),
      ),

    // Constraint nodes can have either KDL children or a math body.
    arco_constraint_node: ($) =>
      prec(
        2,
        nodeShape($, {
          nameRule: field("name", nodeNameChoice(MIXED_MATH_NODE_NAMES)),
          childrenRule: choice($.arco_constraint_math_children, $.node_children),
        }),
      ),

    // Math body for nodes whose braces are always algebra text.
    arco_pure_math_children: ($) =>
      mathChildren($, $.arco_math_text),

    // Constraint math body remains stricter so child-node bodies keep parsing
    // as KDL instead of being swallowed as free-form math text.
    arco_constraint_math_children: ($) =>
      mathChildren($, $.arco_constraint_math_text),

    // Constraint math must include an operator or bracket so bare KDL child
    // nodes like `if { ... }` still parse through node_children.
    arco_constraint_math_text: (_) =>
      token(prec(10, /[^{}]*[<>=!+\-*\/\[\]][^{}]*/)),
  },
});
