integrations/tree-sitter/arco-kdl/test/corpus/arco_math.txt
==================
Constraint math body (simple form)
==================

constraint balance {
  sum(generation[a,t] for a in assets) + unserved_energy[t] = demand[t]
}

---

(document
  (node
    (arco_constraint_node
      (node_field
        (value
          (bare_identifier)))
      (arco_constraint_math_children
        (arco_constraint_math_text)))))

==================
Filter math body
==================

set thermal {
  in gen
  filter { type == thermal }
}

---

(document
  (node
    (kdl_node
      (identifier)
      (node_field
        (value
          (bare_identifier)))
      (node_children
        (node
          (kdl_node
            (identifier)
            (node_field
              (value
                (bare_identifier)))))
        (node
          (arco_pure_math_node
            (arco_pure_math_children
              (arco_math_text))))))))

==================
If and expression inside constraint (generated form)
==================

constraint cap {
  index g { in gen }
  if { active[g] }
  expression { dispatch[g,t] <= capacity[g] }
}

---

(document
  (node
    (arco_constraint_node
      (node_field
        (value
          (bare_identifier)))
      (node_children
        (node
          (kdl_node
            (identifier)
            (node_field
              (value
                (bare_identifier)))
            (node_children
              (node
                (kdl_node
                  (identifier)
                  (node_field
                    (value
                      (bare_identifier))))))))
        (node
          (arco_pure_math_node
            (arco_pure_math_children
              (arco_math_text))))
        (node
          (arco_pure_math_node
            (arco_pure_math_children
              (arco_math_text))))))))

==================
Filter with compound predicate
==================

set mid_gen {
  in gen
  filter { capacity_mw >= 100 and capacity_mw <= 500 }
}

---

(document
  (node
    (kdl_node
      (identifier)
      (node_field
        (value
          (bare_identifier)))
      (node_children
        (node
          (kdl_node
            (identifier)
            (node_field
              (value
                (bare_identifier)))))
        (node
          (arco_pure_math_node
            (arco_pure_math_children
              (arco_math_text))))))))

==================
Minimize with reduction
==================

minimize total_cost {
  sum(fuel_cost[g] * dispatch[g,t] for g in gen for t in time)
}

---

(document
  (node
    (arco_pure_math_node
      (node_field
        (value
          (bare_identifier)))
      (arco_pure_math_children
        (arco_math_text)))))

==================
Expression with reduce projection block
==================

expression investment_by_area_tech {
  reduce "ai" {
    sum "investment"
  }
}

---

(document
  (node
    (arco_pure_math_node
      (node_field
        (value
          (bare_identifier)))
      (arco_pure_math_children
        (arco_math_text)))))

==================
Maximize with identifier body
==================

maximize ArbitrageProfit {
  ArbitrageRevenue
}

---

(document
  (node
    (arco_pure_math_node
      (node_field
        (value
          (bare_identifier)))
      (arco_pure_math_children
        (arco_math_text)))))

==================
Lower and upper bounds
==================

control flow {
  index l { in lines }
  bounds {
    lower { -capacity[l] }
    upper { capacity[l] }
  }
}

---

(document
  (node
    (kdl_node
      (identifier)
      (node_field
        (value
          (bare_identifier)))
      (node_children
        (node
          (kdl_node
            (identifier)
            (node_field
              (value
                (bare_identifier)))
            (node_children
              (node
                (kdl_node
                  (identifier)
                  (node_field
                    (value
                      (bare_identifier))))))))
        (node
          (kdl_node
            (identifier)
            (node_children
              (node
                (arco_pure_math_node
                  (arco_pure_math_children
                    (arco_math_text))))
              (node
                (arco_pure_math_node
                  (arco_pure_math_children
                    (arco_math_text)))))))))))

==================
Filter with quoted string
==================

set storage {
  in technologies
  filter { storage_tech == "Li-Ion" }
}

---

(document
  (node
    (kdl_node
      (identifier)
      (node_field
        (value
          (bare_identifier)))
      (node_children
        (node
          (kdl_node
            (identifier)
            (node_field
              (value
                (bare_identifier)))))
        (node
          (arco_pure_math_node
            (arco_pure_math_children
              (arco_math_text))))))))

==================
Command with multiline string
==================

job "compile-uc" {
  command """
    cargo run -p arco-cli -- compile
    echo "done"
  """
}

---

(document
  (node
    (kdl_node
      (identifier)
      (node_field
        (value
          (string
            (string_fragment))))
      (node_children
        (node
          (kdl_node
            (identifier)
            (node_field
              (value
                (string
                  (string_fragment)
                  (string_fragment)
                  (string_fragment)
                  (string_fragment)
                  (string_fragment))))))))))
